# libaikit

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler.cmake  config.cmake
include/aikit/: kprint.h
source/: kprint.c
